<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Preference for choosing location -->
    <ListPreference
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:entries="@array/pref_location_entries"
        android:entryValues="@array/pref_location_entry_values"
        android:title="@string/pref_location_title" />

    <!-- Preference for choosing temperature units -->
    <ListPreference
        android:key="@string/pref_temperature_units_key"
        android:defaultValue="@string/pref_temperature_units_default"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_entry_values"
        android:title="@string/pref_temperature_units_title" />
</PreferenceScreen>